k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-django
  namespace: forum
spec:
  containers:
  - name: django-debug
    image: ghcr.io/raidriar28/forum-project:latest
    command: ["sh", "-c", "env; sleep 3600"]
  imagePullSecrets:
  - name: ghcr-credentials
