k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: forum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: ghcr.io/raidriar28/forum-project:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        command: ["sh", "-c"]
        args:
        - |
          if [ ! -f /entrypoint.sh ]; then
            echo "/entrypoint.sh not found!"
            exit 1
          fi
          exec /entrypoint.sh gunicorn --log-level=debug core.wsgi:application --bind=0.0.0.0:8000 --workers=3 --timeout=120

      imagePullSecrets:
      - name: ghcr-credentials
