k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: forum
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
